[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "resumake"
version = "3.1.1"
authors = [{ name = "cybardev", email = "sheikh@cybar.dev" }]
description = "Generate resume using data representation objects in Python"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/cybardev/resume"
repository = "https://github.com/cybardev/resume.git"
documentation = "https://github.com/cybardev/resume/blob/main/README.md"
